--- a/hub/templates_new/spawn.html
+++ b/hub/templates_new/spawn.html
@@ -34,19 +34,21 @@
       </div>
 
       <!-- Custom GPU availability -->
-      <div class="row justify-content-center mt-5">
-        <div class="col-md-8 text-center">
+      <div class="row col-sm-offset-2 col-sm-8" style="margin-top: 20px; align-items: center;">
+        <div class="gpu-status" style="font-size: 1.3em; text-align: center;">
           <h3>GPU Availability</h3>
-          <table id="gpu-status-container" class="table table-bordered mx-auto" style="display: none; width: auto;">
-            <thead>
-              <tr>
-                <th>Type</th>
-                <th>Node</th>
-                <th>Available</th>
-              </tr>
-            </thead>  
-            <tbody><!-- dynamically updated by updateGpuStatus fn--></tbody>
-          </table>
+          <div class="table-wrapper" style="width: 50%; margin: 0 auto;">
+            <table id="gpu-status-container" class="table table-bordered" style="display: none;">
+              <thead>
+                <tr>
+                  <th style="text-align: center;">Type</th>
+                  <th style="text-align: center;">Node</th>
+                  <th style="text-align: center;">Available</th>
+                </tr>
+              </thead>  
+              <tbody><!-- dynamically updated by updateGpuStatus fn--></tbody>
+            </table>
+          </div>
           <p class="mt-2">Your server will fail to launch if you request more <s>cats</s> GPUs than available!</p>
         </div>
       </div>
